--- a/css/skins/purple/purple.css
+++ b/css/skins/purple/purple.css
@@ -34,9 +34,10 @@
 p.lead .line,
 .info-testimonial,
 .filter-header,
-.filter-header input[type="button"]{
-	background: #E01017 !important; 
-	background-color: #E01017 !important; 
+/*Color de la barra del navegador*/
+.filter-header input[type="button"]{ 
+	background-color: #FF0000 !important; 
+        background: #FF3131 !important;
 }
 .opacy_bg_03,
 .item-team-01 .info-team,
@@ -88,7 +89,8 @@ blockquote > a,
 .pagination > li > a, .pagination > li > span,
 address i,
 address a{
-	color: #E01017 !important;
+    /*Otorga el color cuando pasa el cursor sobre alguna opcion ul li a*/
+	color: #FFFEFE !important;
 }
 
 /* Borders ----------------------------------------------------------*/
