Agregacion de estilos
se agrego estilos a todas las paginas y algunos botones fueron agregados

--- a/css/MyStyle/Mystyle.css
+++ b/css/MyStyle/Mystyle.css
@@ -3,7 +3,7 @@
     margin: auto;
 }
 .back-vt{
-    background-color: #E01017 !important;
+    background-color: #A30000 !important;
 }
 .color-white{
     color: white !important;
