--- a/css/MyStyle/Mystyle.css
+++ b/css/MyStyle/Mystyle.css
@@ -27,6 +27,12 @@
 .opc {
     width: 290px !important;
 }
+.opci {
+    width: 350px !important;
+}
 .letra{
     color: #A30000 !important;
 }
+
+
+
