--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,8 @@
 @import url("slide/extralayers.css");
 @import url("../js/rs-plugin/css/settings.css");
 /*Google font*/
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,700");
-@import url("http://fonts.googleapis.com/css?family=Raleway");
+/*@import url("http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,700");
+@import url("http://fonts.googleapis.com/css?family=Raleway");*/
 
 
 /* ---------------------------------------------------------------------- */
@@ -2402,7 +2402,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 .info-gallery{
 	position: relative;
 	text-align: center;
-	border:solid #dedede 1px;
+	border:solid #AC1916 1px;
 	padding: 20px 12px 30px 12px;
 	margin-bottom: 40px;
 }
@@ -2410,7 +2410,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 	border-right: 0;
 }
 .info-gallery:before {
-  	border: 20px solid #fff;
+  	border: 20px solid #AC1916;
 	border-right-color: transparent;
   	border-left-color: transparent;
   	border-top-color: transparent;
