--- a/js/fancybox/jquery.fancybox.css
+++ b/js/fancybox/jquery.fancybox.css
@@ -23,10 +23,10 @@
 	left: 0;
 	z-index: 8020;
 }
-
+/*Cambia los colores de la imagen emergente */
 .fancybox-skin {
 	position: relative;
-	background: #f9f9f9;
+	background: #FFF8DC;
 	color: #444;
 	text-shadow: none;
 	-webkit-border-radius: 4px;
