--- a/css/skins/purple/purple.css
+++ b/css/skins/purple/purple.css
@@ -36,7 +36,7 @@ p.lead .line,
 .filter-header,
 /*Color de la barra del navegador*/
 .filter-header input[type="button"]{ 
-        background: #F00001 !important;/*Cambia el color de la barra de navegacion*/
+        background: #88C425 !important;/*Cambia el color de la barra de navegacion*/
 }
 .opacy_bg_03,
 .item-team-01 .info-team,
