--- a/css/skins/purple/purple.css
+++ b/css/skins/purple/purple.css
@@ -89,7 +89,7 @@ blockquote > a,
 address i,
 address a{
     /*Otorga el color cuando pasa el cursor sobre alguna opcion ul li a  y tambien a los iconos*/
-	color: #FFFFFF !important;
+	color: #88C425 !important;
 }
 
 /* Borders ----------------------------------------------------------*/
