--- a/css/style.css
+++ b/css/style.css
@@ -1165,7 +1165,7 @@ p.lead .line{
 	background: #fff;
 }
 .services-lines li:hover{
-	background-color: #00FF00;
+	background-color: #FFFFFF;
 	cursor: pointer;
 }
 .services-lines li:hover i {
