--- a/css/carousel/owl.theme.css
+++ b/css/carousel/owl.theme.css
@@ -17,7 +17,7 @@
 	padding: 0 12px;
 	font-size: 12px;
 	opacity: 0.9;
-	color: #01DF01;     /*COlor de las pestañitas para cambar imagen en el eslider  >>*/
+	color: #FFFFFF;     /*COlor de las pestañitas para cambar imagen en el eslider  >>*/
 }
 /* Clickable class fix problem with hover on touch devices */
 /* Use it for non-touch hover action */
