--- a/css/style.css
+++ b/css/style.css
@@ -3575,7 +3575,7 @@ address strong{
     padding: 5px!important;
 }
 .close{
-    color: white !important;
+    color: #F00001 !important;
     font-size:x-large!important;
 }                        
 .modal-title{
