Leyendo imagenes de tipo Blob
Leyendo imagenes de tipo Blob

--- a/css/MyStyle/Mystyle.css
+++ b/css/MyStyle/Mystyle.css
@@ -3,7 +3,7 @@
     margin: auto;
 }
 .back-vt{
-    background-color: #01DF01 !important;
+    background-color: #88C425 !important;
 }
 .color-white{
     color: white !important;
@@ -31,29 +31,29 @@
     width: 350px !important;
 }
 .losh2{
-    color:  #01DF01!important;
+    color:  #FE2E9A!important;
 }
 .losh4{
-    color:  #01DF01!important;
+    color:  #FE2E9A!important;
 }
 .losp{
-    color: #F00001 !important;
+    color: #308DE4 !important;
 }
 .tamanio{
     font-size: 17px !important; 
 }
 .backcolor{
-    background-color: #01DF01 !important;
+    background-color: #FE2E9A !important;
 }
 .estilobtn{
-    background-color: #01DF01; 
+    background-color: #308DE4; 
     color: #FEFBFB; 
     font-size: 16px !important; 
     height: 38px ; width: 110px; 
     border-radius: 4px !important;
 }
 .coloricon{
-    color: #848484 !important;
+    color: #88C425 !important;
 }
 
 
