--- a/css/skins/purple/purple.css
+++ b/css/skins/purple/purple.css
@@ -104,7 +104,7 @@ address a{
 .section-title-03 h1,
 .title-widget{
 	border-color: #01DF01 !important;
-  /*Color de las barritas en que clasificacion se enceuntra, esto en la pagina de 
+  /*Color de las barritas en que clasificacion se encuentra, esto en la pagina de 
   principalArreglos*/
 }
 .crumbs:before{
